just to run backend

--- a/vercel.json
+++ b/vercel.json
@@ -2,28 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/build"
-      }
-    },
-    {
       "src": "backend/app.py",
-      "use": "@vercel/python",
-      "config": {
-        "includeFiles": ["backend/requirements.txt"]
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/app.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/build/$1"
+      "dest": "backend/app.py"
     }
-  ]
-} 
+  ],
+  "env": {
+    "FLASK_ENV": "production"
+  }
+}
